# libaccounts

./: Makefile.am  autogen.sh  configure.ac  libaccounts.pc.in
debian/: changelog  control  libaccounts-dev.install  libaccounts0.install  rules
doc/: Makefile.am  libaccounts-docs.sgml  libaccounts-sections.txt  libaccounts.types
src/: Makefile.am  account-dialog-context.c  account-dialog-context.h  account-edit-context.c  account-edit-context.h  account-error.h  account-item.c  account-item.h  account-plugin-loader.c  account-plugin-loader.h  account-plugin-manager.c  account-plugin-manager.h  account-plugin.c  account-plugin.h  account-service.c  account-service.h  account-wizard-context.c  account-wizard-context.h  accounts-list.c  accounts-list.h
