SUBDIRS = src doc

ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = Makefile.in configure compile config.guess	\
		       config.h.in config.h.in~ config.sub depcomp	\
		       install-sh ltmain.sh missing aclocal.m4 m4/*	\
		       gtk-doc.m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA	= libaccounts.pc
